# cmdapp

./: .gitignore  README.md  pyproject.toml
cmdapp/base/: __init__.py  alias.py  app.py  message.py  prototype.py
cmdapp/core/: __init__.py  app.py  command.py  configuration.py  context.py  decorator.py  hook.py  prototype.py  response.py
cmdapp/database/: __init__.py  condition.py  connection.py  constants.py  cursor.py  database.py  helper.py  sql.py  table.py
cmdapp/example/: basic.py  context.py  extend.py
cmdapp/generator/: __init__.py
cmdapp/parser/: __init__.py  annotation.py  argparser_options.py  command.py  constants.py  field.py  table.py
cmdapp/render/: __init__.py  file.py  render.py  response.py  table.py  template.html  template.py
cmdapp/types/: __init__.py  dtype.py  sqlite.py
cmdapp/utils/: __init__.py  config.py  extension.py  platform.py  text.py  uri.py  validate.py
tests/: helper.py
tests/database/: test_condition.py  test_operation.py  test_sqlbuilder.py
tests/parser/: test_annotation.py  test_argparser_options.py  test_command.py  test_field.py  test_table.py
tests/render/: test_file.py  test_template.py
tests/utils/: test_configuration.py  test_extension.py  test_text_converter.py
