[tool.poetry]
name = "cmdapp"
version = "0.1.0"
description = "CmdApp with declarative style"
authors = ["Vu Xuan Bac <vuxuanbac712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cmd2 = "^2.4.3"
bogo = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
